<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sinulogbg2"
    tools:context=".controllers.HomeActivity"
    android:padding="20dp"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <!-- loginForm -->
    <LinearLayout
        android:id="@+id/loginForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/prompt_email"
            android:textColorHint="@color/lighterBlue"
            android:textColor="@color/whiter"
            android:textSize="16sp"
            android:padding="10dp"
            android:background="@drawable/custom_input_field"
            android:drawableLeft="@drawable/ic_email"
            android:drawableTint="@color/lighterBlue"
            android:drawablePadding="5dp"
            android:layout_marginBottom="20dp"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword"
            android:hint="@string/prompt_password"
            android:textColorHint="@color/lighterBlue"
            android:textColor="@color/white"
            android:background="@drawable/custom_input_field"
            android:drawableLeft="@drawable/ic_lock"
            android:textSize="16sp"
            android:drawablePadding="5dp"
            android:drawableTint="@color/lighterBlue"
            android:padding="10dp"
            android:singleLine="true"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_txt"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="5dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/custom_btn_rounded"
            android:layout_marginBottom="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="Forgot password?"
                android:textSize="13sp"
                android:textColor="@color/lighterBlue"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/linkchangepass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Change password"
                android:textSize="13sp"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:weightSum="3">

            <TextView
                android:id="@+id/txtnoaccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|right"
                android:text="Don't have an account?"
                android:textSize="13sp"
                android:textColor="@color/lighterBlue"
                android:paddingRight="10dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/linkregister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Register"
                android:textSize="13sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_weight="2"
                />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_gravity="center"/>

    </LinearLayout>

    <!-- noInternet -->
    <LinearLayout
        android:id="@+id/noInternet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:background="@drawable/custom_bg_rounded_white"
        android:visibility="gone"
        android:weightSum="3">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_wifi_off"
            android:layout_weight="2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="You have no internet access, please connect and try again."
            android:textSize="16sp"
            android:textColor="@color/blue"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>