<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/sinulogbg2"
    tools:context=".controllers.User.Account.AccountActivity">

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_bg_opacity_top"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back_arrow"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:tooltipText="Go Back"/>

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/blue"
            android:text="ACCOUNT"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/settings_btn"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:src="@drawable/ic_settings"
            android:layout_gravity="center_vertical"
            android:paddingRight="10dp"
            android:tooltipText="Post a Job"/>

    </LinearLayout>

    <!-- Profile View and Edit -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <!-- View profile details -->
        <LinearLayout
            android:id="@+id/profile_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_bg_opacity_top"
            android:padding="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profile information"
                android:textColor="@color/darkBlue"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="2dp"
                android:background="@color/lightBlue"
                android:layout_marginBottom="20dp"/>

            <ImageView
                android:id="@+id/account_photo"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:minWidth="150dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:src="@drawable/custom_input_field" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Full Name:"
                android:textSize="13sp"
                android:textColor="@color/lightBlue"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/account_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_full_name"
                android:textSize="13sp"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textStyle="bold"
                android:textColor="@color/darkBlue"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Phone:"
                android:textSize="13sp"
                android:textColor="@color/lightBlue"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/account_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_phone"
                android:textSize="13sp"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textStyle="bold"
                android:textColor="@color/darkBlue" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email:"
                android:textSize="13sp"
                android:textColor="@color/lightBlue"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/account_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_email"
                android:textSize="13sp"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textStyle="bold"
                android:textColor="@color/darkBlue"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>

        <!--  Editing profile -->
        <LinearLayout
            android:id="@+id/profile_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_bg_opacity_top"
            android:padding="20dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/form_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Editing profile info"
                android:textColor="@color/darkBlue"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="2dp"
                android:background="@color/lightBlue"
                android:layout_marginBottom="20dp"/>

            <ImageView
                android:id="@+id/img_input"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:minWidth="150dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:src="@drawable/custom_input_field" />

            <TextView
                android:id="@+id/label_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Full Name:"
                android:textSize="13sp"
                android:textColor="@color/blue"
                android:layout_marginBottom="10dp" />

            <EditText
                android:id="@+id/edit_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/prompt_full_name"
                android:textStyle="bold"
                android:textColor="@color/darkBlue"
                android:background="@drawable/custom_bg_opacity" />

            <TextView
                android:id="@+id/label_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Phone (optional):"
                android:textSize="13sp"
                android:textColor="@color/blue"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/prompt_phone"
                android:textStyle="bold"
                android:textColor="@color/darkBlue"
                android:background="@drawable/custom_bg_opacity" />

            <Button
                android:id="@+id/btn_edit_profile_save"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_btn_rounded2"
                android:textSize="16dp"
                android:textColor="@color/darkBlue"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:text="SAVE"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btn_edit_profile_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_btn_rounded2"
                android:textColor="@color/darkBlue"
                android:textSize="16dp"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:text="CANCEL"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>

        <!--  Editing email -->
        <LinearLayout
            android:id="@+id/email_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_bg_opacity_top"
            android:padding="20dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/form2_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Changing your email"
                android:textColor="@color/darkBlue"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="2dp"
                android:background="@color/lightBlue"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/label_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email"
                android:textSize="13sp"
                android:textColor="@color/blue"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/prompt_email"
                android:textStyle="bold"
                android:textColor="@color/darkBlue"
                android:background="@drawable/custom_bg_opacity" />

            <Button
                android:id="@+id/btn_change_email_save"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_btn_rounded2"
                android:textSize="16dp"
                android:textColor="@color/darkBlue"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:text="SAVE"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btn_change_email_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_btn_rounded2"
                android:textColor="@color/darkBlue"
                android:textSize="16dp"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:text="CANCEL"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/custom_btn_rounded"
            android:textSize="16dp"
            android:textColor="@color/darkBlue"
            android:padding="10dp"
            android:text="Logout"
            android:layout_gravity="center"
            android:visibility="visible"/>

    </LinearLayout>

</LinearLayout>